...

  @override
  Widget build(BuildContext context) => Scaffold(
        appBar: FeedAppBar(
          onLogout: context.read<AuthController>().logout,
        ),
        floatingActionButton: const NewMessageAsyncButton(key: Key('btAdd')),
        body: const _Feedlist(),
      );
}

class _Feedlist extends StatelessWidget {
  const _Feedlist({Key? key}) : super(key: key);
...
